--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/website/
+    - assets/website/static/
+    - assets/website/static/css/
+    - assets/website/static/js/
+    - assets/website/charting_library/
+    - assets/website/charting_library/bundles/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
