--- a/react-typescript/package.json
+++ b/react-typescript/package.json
@@ -2,6 +2,7 @@
   "name": "charting-library-react-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
